Change .page position to fixed to resize window on mobile depending on url bar

--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,7 @@ button.activated:active {
 }
 
 .page {
+  position: fixed;
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
