--- a/css/style.scss
+++ b/css/style.scss
@@ -115,6 +115,7 @@ color: white;
 }
 
 .page {
+  position: fixed;
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
